# TASK-1

./: .gitignore  README.md  run_benchmarks.sh
code/cpp/: CMakeLists.txt  Makefile  simple_benchmark.cpp
code/cpp/benchmarks/: benchmark.cpp  main.cpp
code/cpp/include/: matrix_mul.h
code/cpp/src/: matmul  matrix_mul.cpp
code/cpp/tests/: test_matrix.cpp
code/java/: SimpleBenchmark.java
code/java/mat_mul/: dependency-reduced-pom.xml  pom.xml
code/java/mat_mul/src/benchmark/java/: Benchmark.java  MatrixBenchmark.java
code/java/mat_mul/src/main/java/: MatrixUtils.java
code/java/mat_mul/src/test/java/: MatrixUtilsTest.java
code/python/: requirements.txt  simple_test.py
code/python/benchmarks/: run_bench.py  test_benchmark.py
code/python/src/: data_handler.py  mat_mul.py
code/python/tests/: test_correctness.py
code/rust/mat_mul/: Cargo.toml
code/rust/mat_mul/benches/: matrix_benchmark.rs
code/rust/mat_mul/src/: lib.rs  main.rs
code/rust/mat_mul/tests/: correctness_tests.rs
data/output/: python_benchmark_results.csv
data/results/: all_results.csv  all_results.json  cpp_results.txt  java_results.txt  performance_comparison.csv  python_results.txt  rust_results.txt  speedup_analysis.json
paper/: matrix_multiplication_benchmark.out  matrix_multiplication_benchmark.tex  references.bib
